{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 22,
  "lineage": "63dd28f4-06fb-6708-2620-6b0ebd8496aa",
  "resources": [
    {
      "module": "module.dev-app",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:857619978094:vpc/vpc-082ed63fb05fb7355",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0364c4a4b68deee08",
            "default_route_table_id": "rtb-060fc8f1dfe51578f",
            "default_security_group_id": "sg-06ecd07ec36617780",
            "dhcp_options_id": "dopt-0d290f8b1ced6d5c4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-082ed63fb05fb7355",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-060fc8f1dfe51578f",
            "owner_id": "857619978094",
            "region": "ap-south-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.dev-app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0144277607031eca2",
            "arn": "arn:aws:ec2:ap-south-1:857619978094:instance/i-03345dd491025d148",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03345dd491025d148",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dev-tws-terra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a505988366010399",
            "private_dns": "ip-172-31-47-91.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.47.91",
            "public_dns": "ec2-13-127-228-174.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.228.174",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f6e2b8f97084df11",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "dev- ports"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07018a17dc9a7edcc",
            "tags": {
              "Name": "dev-terra-automate"
            },
            "tags_all": {
              "Name": "dev-terra-automate"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b4c0a2dc5dc79f28"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dev-app.aws_default_vpc.default",
            "module.dev-app.aws_key_pair.deployer",
            "module.dev-app.aws_security_group.twssecurity"
          ]
        }
      ]
    },
    {
      "module": "module.dev-app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "twssecurity",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:857619978094:security-group/sg-0b4c0a2dc5dc79f28",
            "description": "This SG is to open ports for EC2 Instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "This is for outgoing internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b4c0a2dc5dc79f28",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "This is for ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev- ports",
            "name_prefix": "",
            "owner_id": "857619978094",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-082ed63fb05fb7355"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "857619978094",
            "id": "sg-0b4c0a2dc5dc79f28",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.dev-app.aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.prod-app",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:857619978094:vpc/vpc-082ed63fb05fb7355",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0364c4a4b68deee08",
            "default_route_table_id": "rtb-060fc8f1dfe51578f",
            "default_security_group_id": "sg-06ecd07ec36617780",
            "dhcp_options_id": "dopt-0d290f8b1ced6d5c4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-082ed63fb05fb7355",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-060fc8f1dfe51578f",
            "owner_id": "857619978094",
            "region": "ap-south-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.prod-app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0144277607031eca2",
            "arn": "arn:aws:ec2:ap-south-1:857619978094:instance/i-08a5290e38d4f8f87",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08a5290e38d4f8f87",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "prod-tws-terra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0eb619474fac3128b",
            "private_dns": "ip-172-31-41-249.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.41.249",
            "public_dns": "ec2-52-66-197-27.ap-south-1.compute.amazonaws.com",
            "public_ip": "52.66.197.27",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fa0b744cce66380c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "prod- ports"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07018a17dc9a7edcc",
            "tags": {
              "Name": "prod-terra-automate"
            },
            "tags_all": {
              "Name": "prod-terra-automate"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0996dc28fd419e135"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.prod-app.aws_default_vpc.default",
            "module.prod-app.aws_key_pair.deployer",
            "module.prod-app.aws_security_group.twssecurity"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0144277607031eca2",
            "arn": "arn:aws:ec2:ap-south-1:857619978094:instance/i-00a2b907dbd33d37b",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00a2b907dbd33d37b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "prod-tws-terra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e9a9b745e941ecaf",
            "private_dns": "ip-172-31-40-210.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.40.210",
            "public_dns": "ec2-13-233-11-26.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.11.26",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00f06da7540c05acb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "prod- ports"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07018a17dc9a7edcc",
            "tags": {
              "Name": "prod-terra-automate"
            },
            "tags_all": {
              "Name": "prod-terra-automate"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0996dc28fd419e135"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.prod-app.aws_default_vpc.default",
            "module.prod-app.aws_key_pair.deployer",
            "module.prod-app.aws_security_group.twssecurity"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0144277607031eca2",
            "arn": "arn:aws:ec2:ap-south-1:857619978094:instance/i-0ae1ba68a77c10611",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ae1ba68a77c10611",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.large",
            "ipv6_address_count": 0,
            "key_name": "prod-tws-terra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c728f277a5df65b5",
            "private_dns": "ip-172-31-32-56.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.32.56",
            "public_dns": "ec2-3-109-217-218.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.217.218",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b0c59cc89fab6e76",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "prod- ports"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07018a17dc9a7edcc",
            "tags": {
              "Name": "prod-terra-automate"
            },
            "tags_all": {
              "Name": "prod-terra-automate"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0996dc28fd419e135"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.prod-app.aws_default_vpc.default",
            "module.prod-app.aws_key_pair.deployer",
            "module.prod-app.aws_security_group.twssecurity"
          ]
        }
      ]
    },
    {
      "module": "module.prod-app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "twssecurity",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:857619978094:security-group/sg-0996dc28fd419e135",
            "description": "This SG is to open ports for EC2 Instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "This is for outgoing internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0996dc28fd419e135",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "This is for ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "prod- ports",
            "name_prefix": "",
            "owner_id": "857619978094",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-082ed63fb05fb7355"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "857619978094",
            "id": "sg-0996dc28fd419e135",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.prod-app.aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.staging-app",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:857619978094:vpc/vpc-082ed63fb05fb7355",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0364c4a4b68deee08",
            "default_route_table_id": "rtb-060fc8f1dfe51578f",
            "default_security_group_id": "sg-06ecd07ec36617780",
            "dhcp_options_id": "dopt-0d290f8b1ced6d5c4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-082ed63fb05fb7355",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-060fc8f1dfe51578f",
            "owner_id": "857619978094",
            "region": "ap-south-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.staging-app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0144277607031eca2",
            "arn": "arn:aws:ec2:ap-south-1:857619978094:instance/i-02b72b3ffd0a5fb8a",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02b72b3ffd0a5fb8a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "staging-tws-terra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08a6feef56b9a4e31",
            "private_dns": "ip-172-31-33-154.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.33.154",
            "public_dns": "ec2-13-233-130-201.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.130.201",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-009b21d2613524360",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "staging- ports"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07018a17dc9a7edcc",
            "tags": {
              "Name": "staging-terra-automate"
            },
            "tags_all": {
              "Name": "staging-terra-automate"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04ce197450a5482c0"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.staging-app.aws_default_vpc.default",
            "module.staging-app.aws_key_pair.deployer",
            "module.staging-app.aws_security_group.twssecurity"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0144277607031eca2",
            "arn": "arn:aws:ec2:ap-south-1:857619978094:instance/i-03abb75632ff8deb4",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03abb75632ff8deb4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "staging-tws-terra-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0901f83b2d4899d39",
            "private_dns": "ip-172-31-37-44.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.37.44",
            "public_dns": "ec2-3-110-225-245.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.110.225.245",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0033d934b85386912",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "staging- ports"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07018a17dc9a7edcc",
            "tags": {
              "Name": "staging-terra-automate"
            },
            "tags_all": {
              "Name": "staging-terra-automate"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04ce197450a5482c0"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.staging-app.aws_default_vpc.default",
            "module.staging-app.aws_key_pair.deployer",
            "module.staging-app.aws_security_group.twssecurity"
          ]
        }
      ]
    },
    {
      "module": "module.staging-app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "twssecurity",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:857619978094:security-group/sg-04ce197450a5482c0",
            "description": "This SG is to open ports for EC2 Instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "This is for outgoing internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04ce197450a5482c0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "This is for ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "staging- ports",
            "name_prefix": "",
            "owner_id": "857619978094",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-082ed63fb05fb7355"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "857619978094",
            "id": "sg-04ce197450a5482c0",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.staging-app.aws_default_vpc.default"
          ]
        }
      ]
    }
  ]
}